# malurl-detector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/.github/workflows/: ci.yml
backend/: app.py
data/raw/: sample_urls.csv
frontend/src/: app.jsx
src/maldet/: detector.py  features.py
tests/: test_detector.py  test_features.py
