[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maldet"
version = "0.0.1"
requires-python = ">=3.9"
description = "Rule-based and ML malicious URL/domain detector"
readme = "README.md"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black", "pre-commit"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
